# src/Api/Routes/UserRoutes.ts
@@ -11,7 +11,7 @@
 import express from 'express';
 import UserController from "../Controllers/UserController";
 const {authenticateToken, authorizationMiddleware} = require("../Middlewares/AuthMiddleware");
-import { upload } from "../Middlewares/upimage"; 
+import { upload} from "../Middlewares/upimage"; 
 const router = express.Router();
 const userController = new UserController();
 router.post("/user/login", userController.login);
@@ -19,7 +19,7 @@ router.post("/user/register", userController.createUser);
 router.post("/user/forgot-password", userController.forgotPassword);
 router.post("/user/verify-forgot-password", userController.verifyForgotPasswordByEmailCode);
 router.post("/user/updatePassword", userController.updatePassword)
-router.post("/user/updateImage", upload.single('imageUser'), userController.updateImage);
+router.post("/user/uploadImage", upload.single('filename'), userController.updateImage);
 
 module.exports = router;
 
