# src/Application/Features/User/Handlers/UpdateImageHandler.ts
@@ -1,17 +1,18 @@
 import { response } from "express";
 import UserRepository from "../../../../Infrastructure/Persistences/Respositories/UserRepository";
 import { UpdateImageResponse } from "../Response/UpdateImageResponse";
+import IUserRepository from "../../../Persistences/IRepositories/IUserRepository";
 
 
 async function UpdateImageHandler(data: any): Promise<UpdateImageResponse> {
   try {
-    const { email, imageUser  } = data;
+    const { email, filename } = data;
     
-    const userRepository = new UserRepository();
+    const userRepository: IUserRepository = new UserRepository();
     const queryData: any = {
       isDelete: false,
       isActive: true,
-      emailConfirmed: false,
+      emailConfirmed: true,
     };
     const user: any = await userRepository.getUserByEmail(email, queryData);
 
@@ -21,10 +22,13 @@ async function UpdateImageHandler(data: any): Promise<UpdateImageResponse> {
    
     const updateData = {
       email: email,
-      imageUser: imageUser,
+      filename: filename,
     };
     const result: any = await userRepository.uploadImage(updateData);
-    return new UpdateImageResponse("Image updated successfully", 200,result);
+    const imagePathData = {
+      imageUser: result,
+    };
+    return new UpdateImageResponse("Image updated successfully", 200, imagePathData);
   } catch (error: any) {
    
     throw new Error(error.message);
