# src/Application/Features/User/Response/UpdateImageResponse.ts
@@ -1,7 +1,13 @@
 import { BaseResponse } from "../../../Common/Model/Response/BaseResponse";
 
 export class UpdateImageResponse extends BaseResponse {
-    constructor(message: string, statusCode: number, data: {}, error?: string){
+    private data: {
+        imageUser: string,
+    };
+    constructor(message: string, statusCode: number, data: {imageUser: string}, error?: string){
         super(message, statusCode, data, error);
+        this.data = {
+            imageUser: data.imageUser,
+        };
     }
 }
